--- a/src/index.html
+++ b/src/index.html
@@ -2,48 +2,24 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>LOGIN</title>
+  <title>Sistema</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <style>
     body {
-      background: url('https://media.istockphoto.com/id/1134068329/es/foto/violeta-p%C3%BArpura-y-azul-marino-descentrado-movimiento-difuminado-degradado-fondo-abstracto.webp?b=1&s=170667a&w=0&k=20&c=gni5JoVL01i-DpMWpATonyYjctmou3HSyv0xj_JS3AM=') no-repeat center center fixed;
-      background-size: cover;
-    }
-    .user-icon {
-      width: 100px;
-      height: 100px;
-      background-color: #140e46;
-      border-radius: 50%;
-      position: absolute;
-      top: -50px;
-      left: 50%;
-      transform: translateX(-50%);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-    .user-icon i {
-      color: #fff;
-      font-size: 50px;
-    }
-    .card-body {
-      padding: 2rem;
-    }
-    .card-title {
-      margin-bottom: 1.5rem;
-    }
-    h3 {
-      color: #000000;
-      font-family: 'Courier New';
-    }
+    background-image: url('https://i.giphy.com/media/v1.Y2lkPTc5MGI3NjExMTZheW52dHNiZTF1NGxkbzJtY2V2cjhuZTdvd3JvN3hxanh1ZHI2MCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/OANp03XvXEV9u/giphy-downsized-large.gif') ;
+    background-size: cover;
+  }
   </style>
 </head>
-<body>
+<body class="mat-typography">
   <app-root></app-root>
   <!-- Agrega Bootstrap JS y dependencias -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
